[package]
name = "neat-rs"
license = "MIT"
version = "0.1.2"
authors = ["Shashi Kant <shashitnak@gmail.com>"]
edition = "2018"
description = "Implementation of neat algorithm in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
slow_nn = "0.1.1"
gym = "2.2.1"